Add operation list on Login page

--- a/mp1/system.ini
+++ b/mp1/system.ini
@@ -1,3 +1,6 @@
 ﻿[Setting]
-core_url  = http://192.168.99.100:8000
-cache_url = http://192.168.99.100:8001
+'core_url  = http://192.168.99.100:8000
+'cache_url = http://192.168.99.100:8001
+
+core_url  = http://localhost:8000
+cache_url = http://localhost:8001
