--- a/mp1/mp1.vbproj
+++ b/mp1/mp1.vbproj
@@ -101,11 +101,16 @@
     <Compile Include="clsSerialNumber.vb" />
     <Compile Include="clsSerialNumberJson.vb" />
     <Compile Include="Dictionary.vb" />
+    <Compile Include="Form1.Designer.vb">
+      <DependentUpon>Form1.vb</DependentUpon>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="frmAssembly.Designer.vb">
+      <DependentUpon>frmAssembly.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmAssembly.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmInspection.Designer.vb">
@@ -151,6 +156,12 @@
     <Compile Include="My Project\ucTest.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="ucAssembly.Designer.vb">
+      <DependentUpon>ucAssembly.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ucAssembly.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ucMain.Designer.vb">
       <DependentUpon>ucMain.vb</DependentUpon>
     </Compile>
@@ -192,6 +203,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmAssembly.resx">
+      <DependentUpon>frmAssembly.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmInspection.resx">
       <DependentUpon>frmInspection.vb</DependentUpon>
     </EmbeddedResource>
@@ -209,6 +223,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucAssembly.resx">
+      <DependentUpon>ucAssembly.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucMain.resx">
       <DependentUpon>ucMain.vb</DependentUpon>
